fixed blog align start button

--- a/styles.css
+++ b/styles.css
@@ -1252,7 +1252,7 @@ body {
 .blogs__content {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     gap: 40px;
     width: 70%;
 }
